<resources>
    <string name="app_name">One English</string>

    <string name="antonyms">Antonyms\nمتضاد</string>
    <string name="synonyms">Synonyms\nمترادف</string>
    <string name="idioms">Idioms\nاصطلاحات</string>
    <string name="slangs">Slangs\nاصطلاحات عامیانه</string>
    <string name="common">Commons\nعبارات رایج</string>
    <string name="commonMistakes">Common Mistakes\nاشتباهات رایج</string>
    <string name="words">Words\nلغات</string>
    <string name="verbs">Verbs\nافعال</string>


    <string name="lblWord">کلمه</string>
    <string name="lblTranslate">ترجمه</string>
    <string name="lblDescription">توضیحات</string>
    <string name="lblPronunciation">تلفظ</string>
    <string name="lblIdiom">اصطلاح</string>
    <string name="lblSlang">اصطلاح عامیانه</string>
    <string name="lblCommon">عبارت</string>
    <string name="lblAntoym">متضاد</string>
    <string name="lblSynonym">مترادف</string>
    <string name="lblVerb">فعل</string>

    <string name="addToFavorites">Added to Favorites</string>
    <string name="removedFromFavorites">Removed from Favorites</string>
    <string name="saveChanges">Save Changes</string>
    <string name="removedFromCollection">Removed from Collection</string>

    <string name="save">ذخیره</string>
    <string name="really_delete">آیا می خواهید حذف شود؟</string>
    <string name="delete">حذف</string>
    <string name="yes">بلی</string>
    <string name="no">خیر</string>
    <string name="action_settings">Setttings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string-array name="category_array">
        <item>Computer</item>
        <item>Math</item>
        <item>Judge</item>
    </string-array>
</resources>
