<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textDirection="rtl"
    android:gravity="right"
    android:padding="10dp"
    android:weightSum="1">

    <TextView
        android:text="@string/lblWord"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:id="@+id/etAntonymTitle" />

    <TextView
        android:text="@string/lblTranslate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:id="@+id/etAntonymTitleTranslate" />


    <TextView
        android:text="@string/lblAntoym"
        android:textStyle="bold"
        android:layout_alignParentRight="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:id="@+id/etAntonym" />

    <TextView
        android:text="ترجمه متضاد"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:id="@+id/etAntonymTranslate" />

    <TextView
        android:text="@string/lblDescription"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="right"
        android:id="@+id/etAntonymDescription"
        android:layout_weight="0.5" />


</LinearLayout>