<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:weightSum="1">

    <TextView
        android:text="@string/lblIdiom"
        style="@style/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="left"
        android:inputType="text"
        android:id="@+id/etIdiomTitle" />


    <TextView
        android:text="@string/lblTranslate"
        style="@style/label"
        android:layout_gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="right"
        android:id="@+id/etIdiomTranslation" />

    <TextView
        android:text="@string/lblDescription"
        style="@style/label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="right"
        android:id="@+id/etIdiomDescription"
        android:layout_weight="0.5"></EditText>


</LinearLayout>