<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.hyedesign.onedic.MainActivity"
    tools:showIn="@layout/app_bar_main">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:padding="12dp">


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:text="@string/words"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnWords"
                    android:layout_weight="1"
                    android:theme="@style/Words.Button" />

                <Button
                    android:text="@string/commonMistakes"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnCommonMistakes"
                    android:layout_weight="1"
                    android:theme="@style/CommonMistackes.Button" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/antonyms"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnAntonyms"
                    android:layout_weight="1"
                    android:theme="@style/Antonyms.Button" />

                <Button
                    android:text="@string/synonyms"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnSynonyms"
                    android:layout_weight="1"
                    android:theme="@style/Synonyms.Button" />


            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/idioms"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnIdioms"
                    android:layout_weight="1"
                    android:theme="@style/Idioms.Button"/>

                <Button
                    android:text="@string/slangs"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnSlangs"
                    android:layout_weight="1"
                    android:theme="@style/Slangs.Button" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <Button
                    android:text="@string/verbs"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:id="@+id/btnVerbs"
                    android:layout_weight="1"
                    android:theme="@style/Verbs.Button"
                    android:visibility="gone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Internal Storage Path:"/>

                    <TextView
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvPath"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="External Storage Path:"/>

                    <TextView
                        android:textStyle="bold"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/tvExtPath"/>

                </LinearLayout>
            </TableRow>
        </TableLayout>


    </ScrollView>
</RelativeLayout>
